# expert-recsys-tasks

./: README.md
task-1/: .env.example  main.py  pyproject.toml
task-1/api/: __init__.py  fireworks_api.py  model.py  nexara_api.py
task-1/config/: __init__.py  config.py
task-1/gui/: __init__.py  gui.py
task-1/test-data/transcriptions/: audio-1.txt  audio-2.txt  audio-3.txt  audio-6.txt  audio-7.txt
task-2/: .env.example  .gitignore  db_schema.txt  gen_bd.py  main.py  pyproject.toml  temp.py  test_redis.py
task-2/app/bot/: bot.py
task-2/app/bot/handlers/: __init__.py  base_handlers.py  callback_handlers.py  command_handlers.py  message_handlers.py
task-2/app/bot/keyboards/: __init__.py  model_keyboard.py  set_menu.py
task-2/app/bot/lexicon/: lexicon.py
task-2/app/llm_agent/: __init__.py  database_manager.py  exceptions.py  llm_agent.py
task-2/config/: __init__.py  config.py
task-2/data/: db_schema.txt
task-3/: .gitignore  main.py  pyproject.toml
task-3/app/bot/: bot.py
task-3/app/bot/fsm/: states.py
task-3/app/bot/handlers/: __init__.py  commands.py
task-3/app/bot/keyboards/: rating_keyboard.py  set_menu.py
task-3/app/database/: __init__.py  csv_db_manager.py
task-3/app/recommendation/: __init__.py  pirson_ucf.py
task-3/core/: __init__.py  collaborative_filtering.py  database_manager.py
task-3/data/: u.data
task-3/notebooks/: collaborative-filtering.ipynb
task-4/: .env.example  .gitignore  pyproject.toml
task-4/app/bot/handlers/: callbacks.py  commands.py
task-4/app/bot/keyboards/: __init__.py
task-4/app/bot/lexicon/: lexicon_ru.py
task-4/app/database/: __init__.py
task-4/app/recsys/: __init__.py  svdpp_recsys.py
task-4/config/: __init__.py  config.py
task-4/core/: __init__.py  recsys.py
