[project]
name = "task-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim-Goncharovskiy",email = "maksimgoncharovskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "environs (>=14.3.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
