[project]
name = "task-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim-Goncharovskiy",email = "maksimgoncharovskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.49.1,<2.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
