[project]
name = "task-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim-Goncharovskiy",email = "maksimgoncharovskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "environs (>=14.5.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
